// Code generated by the tool (https://github.com/trylotus/abi-gen-proto). DO NOT EDIT.
// Source file: <from connector-bot>
syntax = "proto3";

package defaultct;
option go_package = "github.com/trylotus/connectors/defaultct";

import "google/protobuf/timestamp.proto";
import "lotus/lotus.proto";

message Approval {
	option (lotus.composite).index = {unique: true, type: INDEX_TYPE_ORDERED, fields: ["ts","tx_hash","index"]};
	option (lotus.composite).index = {unique: false, type: INDEX_TYPE_ORDERED, fields: ["tx_hash","index"]};

	google.protobuf.Timestamp ts = 1;
	uint64 block_number = 2 [(lotus.index) = {unique: false, type: INDEX_TYPE_ORDERED}];
	bytes tx_hash = 3 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
	uint64 index = 4;
	string owner = 5; // original type: address
	string spender = 6; // original type: address
	bytes value = 7; // original type: uint256
}

message Burn {
	option (lotus.composite).index = {unique: true, type: INDEX_TYPE_ORDERED, fields: ["ts","tx_hash","index"]};
	option (lotus.composite).index = {unique: false, type: INDEX_TYPE_ORDERED, fields: ["tx_hash","index"]};

	google.protobuf.Timestamp ts = 1;
	uint64 block_number = 2 [(lotus.index) = {unique: false, type: INDEX_TYPE_ORDERED}];
	bytes tx_hash = 3 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
	uint64 index = 4;
	string sender = 5; // original type: address
	bytes amount_0 = 6; // original type: uint256
	bytes amount_1 = 7; // original type: uint256
	string to = 8; // original type: address
}

message Mint {
	option (lotus.composite).index = {unique: true, type: INDEX_TYPE_ORDERED, fields: ["ts","tx_hash","index"]};
	option (lotus.composite).index = {unique: false, type: INDEX_TYPE_ORDERED, fields: ["tx_hash","index"]};

	google.protobuf.Timestamp ts = 1;
	uint64 block_number = 2 [(lotus.index) = {unique: false, type: INDEX_TYPE_ORDERED}];
	bytes tx_hash = 3 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
	uint64 index = 4;
	string sender = 5; // original type: address
	bytes amount_0 = 6; // original type: uint256
	bytes amount_1 = 7; // original type: uint256
}

message Swap {
	option (lotus.composite).index = {unique: true, type: INDEX_TYPE_ORDERED, fields: ["ts","tx_hash","index"]};
	option (lotus.composite).index = {unique: false, type: INDEX_TYPE_ORDERED, fields: ["tx_hash","index"]};

	google.protobuf.Timestamp ts = 1;
	uint64 block_number = 2 [(lotus.index) = {unique: false, type: INDEX_TYPE_ORDERED}];
	bytes tx_hash = 3 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
	uint64 index = 4;
	string sender = 5; // original type: address
	bytes amount_0_in = 6; // original type: uint256
	bytes amount_1_in = 7; // original type: uint256
	bytes amount_0_out = 8; // original type: uint256
	bytes amount_1_out = 9; // original type: uint256
	string to = 10; // original type: address
}

message Sync {
	option (lotus.composite).index = {unique: true, type: INDEX_TYPE_ORDERED, fields: ["ts","tx_hash","index"]};
	option (lotus.composite).index = {unique: false, type: INDEX_TYPE_ORDERED, fields: ["tx_hash","index"]};

	google.protobuf.Timestamp ts = 1;
	uint64 block_number = 2 [(lotus.index) = {unique: false, type: INDEX_TYPE_ORDERED}];
	bytes tx_hash = 3 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
	uint64 index = 4;
	bytes reserve_0 = 5; // original type: uint112
	bytes reserve_1 = 6; // original type: uint112
}

message Transfer {
	option (lotus.composite).index = {unique: true, type: INDEX_TYPE_ORDERED, fields: ["ts","tx_hash","index"]};
	option (lotus.composite).index = {unique: false, type: INDEX_TYPE_ORDERED, fields: ["tx_hash","index"]};

	google.protobuf.Timestamp ts = 1;
	uint64 block_number = 2 [(lotus.index) = {unique: false, type: INDEX_TYPE_ORDERED}];
	bytes tx_hash = 3 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
	uint64 index = 4;
	string from = 5; // original type: address
	string to = 6; // original type: address
	bytes value = 7; // original type: uint256
}

